hide ferry routes

--- a/refill-style-more-labels.yaml
+++ b/refill-style-more-labels.yaml
@@ -1014,7 +1014,7 @@ layers:
 
     roads:
         data: { source: osm, layer: roads }
-        filter: { not: { kind: rail } }
+        filter: { not: { kind: [rail, ferry] } }
         draw:
             lines:
                 interactive: true
