--- a/refill-style-more-labels.yaml
+++ b/refill-style-more-labels.yaml
@@ -5461,6 +5461,8 @@ layers:
                 draw:
                     icons:
                         visible: false
+                    text-blend-order:
+                        visible: false
             tram-stop-early-z15:
                 filter: { kind: tram_stop, $zoom: [15] }
                 draw:
@@ -5470,7 +5472,7 @@ layers:
                 filter: { kind: tram_stop, $zoom: { min: 15 } }
                 draw:
                     icons:
-                        size: [[13, 12px], [16, 18px]]
+                        size: [[16, 12px], [17, 18px]]
                     text-blend-order:
                         offset: [[13, [0, 6px]], [16, [0, 9px]]]
             bus-stop-bus-station-labels:
