--- a/refill-style-more-labels.yaml
+++ b/refill-style-more-labels.yaml
@@ -1317,25 +1317,21 @@ styles:
     ux-location-gem-overlay:
         base: points
         texture: pois
-        interactive: global.sdk_interactive
         blend: overlay
         blend_order: 2
     ux-icons-overlay:
         base: points
         texture: pois
-        interactive: global.sdk_interactive
         blend: overlay
         blend_order: 3
     sdk-point-overlay:
         base: points
         texture: pois
-        interactive: global.sdk_interactive
         blend: overlay
         blend_order: 3
     sdk-shield-overlay:
         base: points
         texture: pois
-        interactive: global.sdk_interactive
         blend: overlay
         blend_order: 3
     sdk-line-overlay:
@@ -1382,6 +1378,7 @@ layers:
         data: { source: mz_route_line }
         draw:
             ux-lines-overlay:
+                interactive: global.sdk_interactive
                 color: '#06a6d4'
                 order: 500
                 width: [[0,3.5px],[5,5px],[9,7px],[10,6px],[11,6px],[13,8px],[14,9px],[15,10px],[16,11px],[17,12px],[18,10px]]
@@ -1392,6 +1389,7 @@ layers:
                 # each transit route segment could be a different "line" each with it's own color
                 # but some transit lines don't define a color, in those cases default to blue
                 # and since the color is coming from Transit.land they call it "color" instead of "colour"
+                interactive: global.sdk_interactive
                 color: function() { return feature.color || '#06a6d4'; }
                 order: 500
                 width: [[0,3.5px],[5,5px],[9,7px],[10,6px],[11,6px],[13,8px],[14,9px],[15,10px],[16,11px],[17,12px],[18,10px]]
@@ -1594,6 +1592,7 @@ layers:
         data: { source: mz_default_line }
         draw:
             sdk-line-overlay:
+                interactive: global.sdk_interactive
                 color: '#06a6d4'
                 order: 503
                 width: 3px
@@ -1601,6 +1600,7 @@ layers:
         data: { source: mz_default_polygon }
         draw:
             sdk-polygon-overlay:
+                interactive: global.sdk_interactive
                 color: [0.02,0.65,0.82,0.5]  #'#06b1e2'
                 order: 501
             sdk-line-overlay:
@@ -4411,34 +4411,6 @@ layers:
                             fill: [0.4,0.4,0.4]
                             transform: uppercase
 
-        # city_walls:
-        #     filter: { kind: city_wall }
-        #     draw:
-        #         lines:
-        #             order: 8
-        #             color: global.city_wall
-        #             width: [[12, 0.75px], [13, 1.0px], [14, 1.2px], [15, 2.0px], [16, 2.5px], [19, 6m]]
-        retaining_wall:
-            filter: { kind: retaining_wall }
-            draw:
-                lines:
-                    color: [0.90,0.90,0.90] # global.retaining_wall
-                    width: [[14, 0.5px], [15, 1.0px], [16, 1.5px], [17, 2.0px], [19, 4m]]
-        # snow_fence:
-        #     filter: { kind: snow_fence }
-        #     draw:
-        #         lines:
-        #             order: 8
-        #             color: [1.0,0.0,0.0] # global.snow_fence
-        #             width: [[14, 0.5px], [15, 1.0px], [16, 1.5px], [17, 2.0px], [19, 4m]]
-
-        fence:
-            filter: { kind: fence }
-            draw:
-                lines:
-                    color: [1.0,1.0,1.0]
-                    width: [[14, 0.5px], [15, 1.0px], [16, 1.5px], [17, 2.0px], [19, 1m]]
-
     places:
         data: { source: mapzen, layer: places }
         filter:
@@ -6054,9 +6026,13 @@ layers:
             park-dots1:
                 order: global.feature_order
                 visible: false
+            tiny-dots:
+                order: global.feature_order
             medium-dots:
                 order: global.feature_order
                 visible: false
+            dots:
+                order: global.feature_order
             horizontal-bars:
                 order: global.feature_order
                 visible: false
@@ -6076,6 +6052,8 @@ layers:
                 order: global.feature_order
                 visible: false
             polygons:
+                order: global.feature_order
+            lines:
                 order: global.feature_order
 
         landuse-labels:
@@ -6473,7 +6451,8 @@ layers:
                         visible: true
                     outline:
                         style: lines
-                        color: global.green6
+                        order: global.feature_order
+                        color: [0.90,0.90,0.90] #global.green6
                         width: [[14,0px],[15,1px],[16,1m]]
             place_of_worship:
                 filter:
@@ -6584,6 +6563,36 @@ layers:
         #         dots:
         #             order: 1
         #             color: [[4, [1.000,0.510,0.894]], [6, [1.000,0.510,0.894]], [7, [0.882,0.639,0.827]], [8, [0.757,0.729,0.753]]]
+
+        # city_walls:
+        #     filter: { kind: city_wall }
+        #     draw:
+        #         lines:
+        #             order: 8
+        #             color: global.city_wall
+        #             width: [[12, 0.75px], [13, 1.0px], [14, 1.2px], [15, 2.0px], [16, 2.5px], [19, 6m]]
+        retaining_wall:
+            filter: { kind: retaining_wall }
+            draw:
+                lines:
+                    color: [0.9, 0.9, 0.9] # global.retaining_wall
+                    width: [[14, 0.5px], [15, 1.0px], [16, 1.5px], [17, 2.0px], [19, 2m]]
+        # snow_fence:
+        #     filter: { kind: snow_fence }
+        #     draw:
+        #         lines:
+        #             order: 8
+        #             color: [1.0,0.0,0.0] # global.snow_fence
+        #             width: [[14, 0.5px], [15, 1.0px], [16, 1.5px], [17, 2.0px], [19, 4m]]
+
+        fence:
+            filter: { kind: fence }
+            draw:
+                lines:
+                    visible: true
+                    color: [0.8, 0.8, 0.8]
+                    width: [[14, 0.5px], [15, 1.0px], [16, 1.5px], [17, 2.0px], [19, 1m]]
+
 
 #    transit-bus-roads:
 #        data: { source: mapzen, layer: roads }
